# my_cpp_project

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  docker-compose.yml
.github/workflows/: ci-cd.yml
include/: thread_pool.h
src/: main.cpp  thread_pool.cpp
tests/: main_test.cpp  thread_pool_tests.cpp
